test/tests/compiler/8_loops/valid/null_for_header.plx
pub fn main(none) i32 {
    a: i32 = 0
    loop {
        a = a + 1
        if a > 3 {
            break
        }
    }

    return a
}

